--- a/_prose.yml
+++ b/_prose.yml
@@ -8,61 +8,21 @@ prose:
     - login: "anrv"
       user: "Ana Ruiz Varona"
   metadata:
-    content/publication:
+    content/posts:
       - name: "title"
         field:
           element: "text"
           label: "Title"
           placeholder: "El título de la publicación"
-      -name: "date"
+      - name: "date"
         field:
           element: "text"
           label: "Fecha"
           placeholder: "Fecha en formato aaaa-mm-dd (año-mes-día)"
           value: CURRENT_DATETIME
-    content/blog:
-      - name: "title"
+      - draft:
         field:
-          element: "text"
-          label: "Title"
-          placeholder: "The title that your readers see on the page."
-      - name: "description"
-        field:
-          element: "textarea"
-          label: "Description"
-          placeholder: "The meta description - often used by Google in search results page."
-      - name: "author"
-        field:
-          element: "textarea"
-          label: "Author"
-          placeholder: "Must be in format FirstnameLastname - e.g. JohnGriffin"
-          value: CURRENT_USER
-      - name: "slug"
-        field:
-          element: "text"
-          label: "Slug"
-          placeholder: "The last part of the URL."
-      - name: "date"
-        field:
-          element: "text"
-          label: "Date"
-          placeholder: "Date in format yyyy-mm-dd."
-      - name: "header_image"
-        field:
-          element: "text"
-          label: "Header Image"
-          placeholder: "Full-width header image - e.g. /images/myfile.png"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Add Tags"
-          options:
-            - name: "Blog"
-              value: "blog"
-          alterable: True
-    static:
-      - name: "url"
-        field:
-          element: "text"
-          label: "Url"
-          value: ""
+          element: "checkbox"
+          label: "Borrador"
+          help: "Si esta opción está marcada, el contenido se guardará, pero no será publicado"
+          value: true
