Added publication type.

--- a/_prose.yml
+++ b/_prose.yml
@@ -47,3 +47,22 @@ prose:
               value: "Ana Ruiz Varona"
             - name: "Carlos Cámara Menoyo"
               value: "Carlos Cámara Menoyo"
+        - name: "publication_types"
+        field:
+          element: "select"
+          label: "Tipo de publicación"
+          options:
+            - name: "Sin categorizar"
+              value: "0"
+            - name: "Conferencia"
+              value: "1"
+            - name: "Publicación en revista"
+              value: "2"
+            - name: "Publicación en curso"
+              value: "3"
+            - name: "Informe"
+              value: "4"
+            - name: "Libro"
+              value: "5"
+            - name: "Capítulo de libro"
+              value: "6"
