--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ defaultContentLanguageInSubdir = false
 [params]
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, or `dark`.
-  color_theme = "default"
+  color_theme = "earte"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
